# HybridLearning

./: .gitignore  MUJOCO_LOG.TXT  Untitled.ipynb  Untitled1.ipynb  analysis.ipynb  cart_pole_env.py  deleteme.cpp  deter_model_based_control.py  deterministic_controller.py  enjoy.py  enjoy_hlt.py  enjoy_mpc.py  enjoy_sac.py  full_alg_test.ipynb  full_alg_test_np.ipynb  hlt.py  hlt_deter.py  hlt_stoch.py  hybrid_stochastic.py  make_figure.ipynb  mdn_model.ipynb  mdn_model.py  mig.sh  mig_hlt.py  model.py  mppi.py  np_hybrid_stochastic.py  out  output.txt  pi_test.py  rbf_network_test.ipynb  readme.md  run.sh  sac.py  stoch_model_based_control.py  td_hybrid_stochastic.py  tests.ipynb  train_hlt.py  train_mpc.py  train_sac.py  (+1 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  analysis-checkpoint.ipynb  cart_pole_model-checkpoint.py  custom_cartpoleswingup-checkpoint.py  deterministic_controller-checkpoint.py  full_alg_test-checkpoint.ipynb  hybrid_stochastic-checkpoint.py  make_figure-checkpoint.ipynb  mdn_model-checkpoint.ipynb  mdn_model-checkpoint.py  mig_hlt-checkpoint.py  mppi-checkpoint.py  rbf_network_test-checkpoint.ipynb  tests-checkpoint.ipynb
benchmark_examples/: cartpole_swingup_trials.sh  lunarlander_trials.sh  policy.pkl  policy_2.pkl  rew_data_2.pkl  sac_bm.py  sac_examples.py  sac_lunar_lander.py  sac_reacher.py
benchmarks/: 1  boot_strapped_behavior_cloning.py  h_np.py  (+13 more)
sawyer/: CMakeLists.txt  README.md  package.xml  robot.bash
sawyer/config/: april_tags.rviz  block_tags1.yaml  block_tags2.yaml  imitation_learning_demo_tags.yaml  obj_bundle_calib_tags.yaml  soft_block_bundle.yaml  soft_block_tags2.yaml  tags2.yaml
sawyer/launch/: init_cam_n_track.launch
sawyer/msg/: Move.msg  RelativeMove.msg  Reward.msg  State.msg
sawyer/scripts/: april_tags  ik_move_position  ik_move_torque  ik_move_velocity  test_traj  waypoint_move  waypoint_move_relative
(+17182 files in other folders)
